Fix chat layout issues. Use a vbox layout.

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -6,41 +6,6 @@
 	right: 80px !important;
 	left: auto !important;
 
-	.x-window-body-chat-window {
-	    display: -webkit-box;
-	    display: -webkit-flex;
-	    display: -ms-flexbox;
-	    display: flex;
-	    -webkit-box-orient: vertical;
-	    -webkit-box-direction: normal;
-	    -webkit-flex-flow: column nowrap;
-	        -ms-flex-flow: column nowrap;
-	            flex-flow: column nowrap;
-
-	    & > *:first-child {
-		    -webkit-box-flex: 0;
-		    -webkit-flex: 0 0 auto;
-		        -ms-flex: 0 0 auto;
-		            flex: 0 0 auto;
-		}
-
-		&> * {
-		    -webkit-box-flex: 1;
-		    -webkit-flex: 1 1 auto;
-		        -ms-flex: 1 1 auto;
-		            flex: 1 1 auto;
-		    display: -webkit-box;
-		    display: -webkit-flex;
-		    display: -ms-flexbox;
-		    display: flex;
-		}
-
-
-		.nti-window-header .header-body{
-		    width: 100%;
-		}
-	}
-
 	.nti-window-header {
 		.header-body {
 			.tools {
@@ -124,26 +89,6 @@
 	.chat-view {
 		border-radius: 0 5px 5px 0;
 		box-shadow: -2px 0px 9px -5px #333333;
-		
-		display: -webkit-box;
-	    display: -webkit-flex;
-	    display: -ms-flexbox;
-	    display: flex;
-	    -webkit-box-orient: vertical;
-	    -webkit-box-direction: normal;
-	    -webkit-flex-direction: column;
-	        -ms-flex-direction: column;
-	            flex-direction: column;
-	    position: relative;
-	    overflow: hidden;
-
-	    > * {
-		    -webkit-box-flex: 0;
-		    -webkit-flex: 0 0 auto;
-		        -ms-flex: 0 0 auto;
-		            flex: 0 0 auto;
-		}
-
 
 		.error-box {
 			position: relative;
@@ -203,13 +148,6 @@
 		//	where <shadow> is defined as:
 		//		inset? && [ <offset-x> <offset-y> <blur-radius>? <spread-radius>? <color>? ]
 		//		
-		
-		-webkit-box-flex: 1;
-    	-webkit-flex: 1 1 auto;
-       	-ms-flex: 1 1 auto;
-        flex: 1 1 auto;
-        margin-bottom: 50px;	// Account for the chat-entry height.
-		max-height: 243px;
 
 		.control {
 			display: none;
@@ -382,49 +320,6 @@
 		}
 	}
 
-	.chat-entry {
-		position: absolute;
-		border-radius: 0 0 5px 5px;
-		background: #f7f7f7;
-		box-shadow: inset 0 0 1px 1px white;
-		bottom: 0;
-  		right: 0;
-  		left: 0;
-  		z-index: 10;
-  		border-top: 1px solid #cfcfcf !important;
-
-		div {
-			margin: 10px 8px 10px 8px;
-			.add-whiteboard {
-				float: left;
-				margin: 4px;
-				background: transparent $icons no-repeat;
-				@include sprite($icons,'whiteboard',$dimensions: true);
-				cursor: pointer;
-			}
-
-			div {
-				margin: 0 0 0 37px;
-				input {
-					padding: 5px;
-					color: $primary-grey;
-					height: 30px;
-					font-family: $font;
-					//font-size: 15pt;
-					width: 100%;
-					border-radius: 3px;
-					border: 1px solid #a0a0a0;
-					box-shadow: inset 3px 3px 10px -5px #a0a0a0;
-					//TODO: fix to be a sane value (use RGBA to lighten the shadow, not the blur & spread)
-					// REFRESHER: box-shadow syntax is:
-					// box-shadow:  none | <shadow> [,<shadow>]*
-					//	where <shadow> is defined as:
-					//		inset? && [ <offset-x> <offset-y> <blur-radius>? <spread-radius>? <color>? ]
-				}
-			}
-		}
-	}
-
 	.entry-card {
 		border-radius: 0 0 5px 5px;
 		.mod-buttons {
@@ -433,6 +328,49 @@
 
 			.x-btn-caution-large {
 				margin-left: 0;
+			}
+		}
+
+		.chat-entry {
+			position: absolute;
+			border-radius: 0 0 5px 5px;
+			background: #f7f7f7;
+			box-shadow: inset 0 0 1px 1px white;
+			bottom: 0;
+	  		right: 0;
+	  		left: 0;
+	  		z-index: 10;
+	  		border-top: 1px solid #cfcfcf !important;
+
+			div {
+				margin: 10px 8px 10px 8px;
+				.add-whiteboard {
+					float: left;
+					margin: 4px;
+					background: transparent $icons no-repeat;
+					@include sprite($icons,'whiteboard',$dimensions: true);
+					cursor: pointer;
+				}
+
+				div {
+					margin: 0 0 0 37px;
+					input {
+						padding: 5px;
+						color: $primary-grey;
+						height: 30px;
+						font-family: $font;
+						//font-size: 15pt;
+						width: 100%;
+						border-radius: 3px;
+						border: 1px solid #a0a0a0;
+						box-shadow: inset 3px 3px 10px -5px #a0a0a0;
+						//TODO: fix to be a sane value (use RGBA to lighten the shadow, not the blur & spread)
+						// REFRESHER: box-shadow syntax is:
+						// box-shadow:  none | <shadow> [,<shadow>]*
+						//	where <shadow> is defined as:
+						//		inset? && [ <offset-x> <offset-y> <blur-radius>? <spread-radius>? <color>? ]
+					}
+				}
 			}
 		}
 	}
